Fix header overlapping

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 
 body {
   max-width: 1310px;
-  min-width: 320px;
+  min-width: 370px;
   margin: auto;
 }
 
